# docs/swagger.json
@@ -5,6 +5,55 @@
         "license": {}
     },
     "paths": {
+        "/base/captcha": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "base"
+                ],
+                "summary": "生成验证码",
+                "responses": {
+                    "200": {
+                        "description": "{\"Code\":200,\"data\":{},\"msg\":\"获取成功\"}",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/base/captcha/:captchaId": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "base"
+                ],
+                "summary": "生成验证码图片路径",
+                "responses": {
+                    "200": {
+                        "description": "{\"Code\":200,\"data\":{},\"msg\":\"获取成功\"}",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/book/detail/{bookId}": {
             "get": {
                 "description": "书详情",
@@ -14,6 +63,10 @@
                 "produces": [
                     "application/json"
                 ],
+                "tags": [
+                    "section"
+                ],
+                "summary": "书详情",
                 "parameters": [
                     {
                         "type": "integer",
@@ -54,6 +107,10 @@
                 "produces": [
                     "application/json"
                 ],
+                "tags": [
+                    "section"
+                ],
+                "summary": "获取书籍列表",
                 "parameters": [
                     {
                         "type": "integer",
@@ -101,6 +158,10 @@
                 "produces": [
                     "application/json"
                 ],
+                "tags": [
+                    "section"
+                ],
+                "summary": "搜索书",
                 "parameters": [
                     {
                         "type": "string",
@@ -155,6 +216,10 @@
                 "produces": [
                     "application/json"
                 ],
+                "tags": [
+                    "section"
+                ],
+                "summary": "章节列表",
                 "parameters": [
                     {
                         "type": "integer",
@@ -202,6 +267,10 @@
                 "produces": [
                     "application/json"
                 ],
+                "tags": [
+                    "section"
+                ],
+                "summary": "查询书下所有章节信息",
                 "parameters": [
                     {
                         "type": "integer",
@@ -242,6 +311,10 @@
                 "produces": [
                     "application/json"
                 ],
+                "tags": [
+                    "section"
+                ],
+                "summary": "查询书下所有章节信息",
                 "parameters": [
                     {
                         "type": "integer",
@@ -274,14 +347,17 @@
             }
         },
         "/syn": {
-            "get": {
-                "description": "mysql数据同步到ES",
+            "post": {
                 "consumes": [
                     "application/json"
                 ],
                 "produces": [
                     "application/json"
                 ],
+                "tags": [
+                    "base"
+                ],
+                "summary": "mysql数据同步到ES",
                 "responses": {
                     "200": {
                         "description": "OK",
